<?xml version="1.0"?>
<package>
  <name>glipviz</name>
  <version>0.0.0</version>
  <description>UV ROS Face Deteccion Viewer</description>

  <maintainer email="anmarin@uv.mx">Antonio Marin-Hernandez</maintainer>
  <license>BSD</license>

  <author email="anmarin@uv.mx">Antonio Marin-Hernandez</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uv_msgs></build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>